force-app/main/default/src/objects/Email_Quick_Send_MVN__c/Email_Quick_Send_MVN__c.object-meta.xml
<CustomObject>
    <description>Allows a user to send an email easily from Salesforce while on a mobile device.</description>
    <label>Email Quick Send</label>
    <nameField>
        <displayFormat>EQS-{00000}</displayFormat>
        <label>Email Quick Send Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Quick Sends</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>