force-app/main/default/src/objects/Email_Quick_Send_MVN__c/fields/Account_MVN__c.field-meta.xml
<CustomField>
    <fullName>Account_MVN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account this email belongs to. This may be set by sending an email to an account or, by trigger, when the account is created through a lead conversion.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Email Quick Sends</relationshipLabel>
    <relationshipName>Email_Quick_Sends_MVN</relationshipName>
    <type>Lookup</type>
</CustomField>