force-app/main/default/src/objects/Email_Quick_Send_MVN__c/fields/Attachments_MVN__c.field-meta.xml
<CustomField>
    <fullName>Attachments_MVN__c</fullName>
    <description>Files to be sent as attachments with the email.</description>
    <label>Attachments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Email_Template_MVN__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ASRS_DR_Fact_Sheet_MVN</fullName>
                <isActive>false</isActive>
                <label>ASRS_DR_Fact_Sheet_MVN</label>
            </value>
            <value>
                <fullName>Diabetes_Fact_Sheet_MVN</fullName>
                <isActive>false</isActive>
                <label>Diabetes Fact Sheet</label>
            </value>
            <value>
                <fullName>Diabetic_Macular_Edema_MVN</fullName>
                <isActive>false</isActive>
                <label>Diabetic Macular Edema</label>
            </value>
            <value>
                <fullName>Diabetic_Retinopathy_Brochure_MVN</fullName>
                <label>Diabetic Retinopathy Brochure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>