force-app/main/default/src/objects/Email_Quick_Send_MVN__c/fields/Care_Plan_MVN__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_MVN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the care plan from which this email quick send was sent.</description>
    <label>Care Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CarePlan</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Email Quick Sends</relationshipLabel>
    <relationshipName>Email_Quick_Sends</relationshipName>
    <type>Lookup</type>
</CustomField>