force-app/main/default/src/objects/Email_Quick_Send_MVN__c/fields/Consumer_MVN__c.field-meta.xml
<CustomField>
    <fullName>Consumer_MVN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Interaction from which the email quick send was requested.</description>
    <label>Consumer</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Email Quick Sends</relationshipLabel>
    <relationshipName>Email_Quick_Sends_MVN</relationshipName>
    <type>Lookup</type>
</CustomField>