force-app/main/default/src/objects/Email_Quick_Send_MVN__c/fields/Date_Sent_MVN__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_MVN__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date on which the email was sent. Used for timeline view configuration.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Sent</label>
    <type>Date</type>
</CustomField>