force-app/main/default/src/objects/Email_Quick_Send_MVN__c/fields/Email_Template_MVN__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_MVN__c</fullName>
    <description>Existing email template for the email to be sent using.</description>
    <label>Email Template</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment_Reminder_MVN</fullName>
                <label>Appointment Reminder</label>
            </value>
            <value>
                <fullName>Diabetic_Retinopathy_and_You_MVN</fullName>
                <label>Diabetic Retinopathy &amp; You</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>