force-app/main/default/src/objects/Email_Quick_Send_MVN__c/fields/From_Address_MVN__c.field-meta.xml
<CustomField>
    <fullName>From_Address_MVN__c</fullName>
    <description>The org-wide email address from which this email will be sent. Maps to the Display Name of the org-wide address.</description>
    <label>From Address</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEDSI Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>