force-app/main/default/src/objects/Email_Quick_Send_MVN__c/fields/To_Address_MVN__c.field-meta.xml
<CustomField>
    <fullName>To_Address_MVN__c</fullName>
    <description>Email address to which the message should be sent.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>To Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>